# lib/go/api_validate_email_verification_with_otp.go
@@ -1,0 +1,131 @@
+/*
+API for AuthApplication
+
+Bran's Auth API
+
+API version: 1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package authclient
+
+import (
+	"bytes"
+	"context"
+	"io"
+	"net/http"
+	"net/url"
+)
+
+
+// ValidateEmailVerificationWithOtpAPIService ValidateEmailVerificationWithOtpAPI service
+type ValidateEmailVerificationWithOtpAPIService service
+
+type ApiValilidateEmailVerificationOtpRequest struct {
+	ctx context.Context
+	ApiService *ValidateEmailVerificationWithOtpAPIService
+	emailConfirmationOtpSubmitRequest *EmailConfirmationOtpSubmitRequest
+}
+
+func (r ApiValilidateEmailVerificationOtpRequest) EmailConfirmationOtpSubmitRequest(emailConfirmationOtpSubmitRequest EmailConfirmationOtpSubmitRequest) ApiValilidateEmailVerificationOtpRequest {
+	r.emailConfirmationOtpSubmitRequest = &emailConfirmationOtpSubmitRequest
+	return r
+}
+
+func (r ApiValilidateEmailVerificationOtpRequest) Execute() (*AuthResponse, *http.Response, error) {
+	return r.ApiService.ValilidateEmailVerificationOtpExecute(r)
+}
+
+/*
+ValilidateEmailVerificationOtp Method for ValilidateEmailVerificationOtp
+
+ @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+ @return ApiValilidateEmailVerificationOtpRequest
+*/
+func (a *ValidateEmailVerificationWithOtpAPIService) ValilidateEmailVerificationOtp(ctx context.Context) ApiValilidateEmailVerificationOtpRequest {
+	return ApiValilidateEmailVerificationOtpRequest{
+		ApiService: a,
+		ctx: ctx,
+	}
+}
+
+// Execute executes the request
+//  @return AuthResponse
+func (a *ValidateEmailVerificationWithOtpAPIService) ValilidateEmailVerificationOtpExecute(r ApiValilidateEmailVerificationOtpRequest) (*AuthResponse, *http.Response, error) {
+	var (
+		localVarHTTPMethod   = http.MethodPost
+		localVarPostBody     interface{}
+		formFiles            []formFile
+		localVarReturnValue  *AuthResponse
+	)
+
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "ValidateEmailVerificationWithOtpAPIService.ValilidateEmailVerificationOtp")
+	if err != nil {
+		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
+	}
+
+	localVarPath := localBasePath + "/api/v1/auth/public/validate-email-verification-otp"
+
+	localVarHeaderParams := make(map[string]string)
+	localVarQueryParams := url.Values{}
+	localVarFormParams := url.Values{}
+	if r.emailConfirmationOtpSubmitRequest == nil {
+		return localVarReturnValue, nil, reportError("emailConfirmationOtpSubmitRequest is required and must be specified")
+	}
+
+	// to determine the Content-Type header
+	localVarHTTPContentTypes := []string{}
+
+	// set Content-Type header
+	localVarHTTPContentType := selectHeaderContentType(localVarHTTPContentTypes)
+	if localVarHTTPContentType != "" {
+		localVarHeaderParams["Content-Type"] = localVarHTTPContentType
+	}
+
+	// to determine the Accept header
+	localVarHTTPHeaderAccepts := []string{"*/*"}
+
+	// set Accept header
+	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
+	if localVarHTTPHeaderAccept != "" {
+		localVarHeaderParams["Accept"] = localVarHTTPHeaderAccept
+	}
+	// body params
+	localVarPostBody = r.emailConfirmationOtpSubmitRequest
+	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
+	if err != nil {
+		return localVarReturnValue, nil, err
+	}
+
+	localVarHTTPResponse, err := a.client.callAPI(req)
+	if err != nil || localVarHTTPResponse == nil {
+		return localVarReturnValue, localVarHTTPResponse, err
+	}
+
+	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
+	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
+	if err != nil {
+		return localVarReturnValue, localVarHTTPResponse, err
+	}
+
+	if localVarHTTPResponse.StatusCode >= 300 {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: localVarHTTPResponse.Status,
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	err = a.client.decode(&localVarReturnValue, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+	if err != nil {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: err.Error(),
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	return localVarReturnValue, localVarHTTPResponse, nil
+}
