# lib/go/model_reset_user_password_request.go
@@ -1,0 +1,234 @@
+/*
+API for AuthApplication
+
+Bran's Auth API
+
+API version: 1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package authclient
+
+import (
+	"encoding/json"
+)
+
+// checks if the ResetUserPasswordRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ResetUserPasswordRequest{}
+
+// ResetUserPasswordRequest struct for ResetUserPasswordRequest
+type ResetUserPasswordRequest struct {
+	OtpId *string `json:"otpId,omitempty"`
+	OtpCode *string `json:"otpCode,omitempty"`
+	EmailOrUsername *string `json:"emailOrUsername,omitempty"`
+	Password *string `json:"password,omitempty"`
+}
+
+// NewResetUserPasswordRequest instantiates a new ResetUserPasswordRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewResetUserPasswordRequest() *ResetUserPasswordRequest {
+	this := ResetUserPasswordRequest{}
+	return &this
+}
+
+// NewResetUserPasswordRequestWithDefaults instantiates a new ResetUserPasswordRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewResetUserPasswordRequestWithDefaults() *ResetUserPasswordRequest {
+	this := ResetUserPasswordRequest{}
+	return &this
+}
+
+// GetOtpId returns the OtpId field value if set, zero value otherwise.
+func (o *ResetUserPasswordRequest) GetOtpId() string {
+	if o == nil || IsNil(o.OtpId) {
+		var ret string
+		return ret
+	}
+	return *o.OtpId
+}
+
+// GetOtpIdOk returns a tuple with the OtpId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResetUserPasswordRequest) GetOtpIdOk() (*string, bool) {
+	if o == nil || IsNil(o.OtpId) {
+		return nil, false
+	}
+	return o.OtpId, true
+}
+
+// HasOtpId returns a boolean if a field has been set.
+func (o *ResetUserPasswordRequest) HasOtpId() bool {
+	if o != nil && !IsNil(o.OtpId) {
+		return true
+	}
+
+	return false
+}
+
+// SetOtpId gets a reference to the given string and assigns it to the OtpId field.
+func (o *ResetUserPasswordRequest) SetOtpId(v string) {
+	o.OtpId = &v
+}
+
+// GetOtpCode returns the OtpCode field value if set, zero value otherwise.
+func (o *ResetUserPasswordRequest) GetOtpCode() string {
+	if o == nil || IsNil(o.OtpCode) {
+		var ret string
+		return ret
+	}
+	return *o.OtpCode
+}
+
+// GetOtpCodeOk returns a tuple with the OtpCode field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResetUserPasswordRequest) GetOtpCodeOk() (*string, bool) {
+	if o == nil || IsNil(o.OtpCode) {
+		return nil, false
+	}
+	return o.OtpCode, true
+}
+
+// HasOtpCode returns a boolean if a field has been set.
+func (o *ResetUserPasswordRequest) HasOtpCode() bool {
+	if o != nil && !IsNil(o.OtpCode) {
+		return true
+	}
+
+	return false
+}
+
+// SetOtpCode gets a reference to the given string and assigns it to the OtpCode field.
+func (o *ResetUserPasswordRequest) SetOtpCode(v string) {
+	o.OtpCode = &v
+}
+
+// GetEmailOrUsername returns the EmailOrUsername field value if set, zero value otherwise.
+func (o *ResetUserPasswordRequest) GetEmailOrUsername() string {
+	if o == nil || IsNil(o.EmailOrUsername) {
+		var ret string
+		return ret
+	}
+	return *o.EmailOrUsername
+}
+
+// GetEmailOrUsernameOk returns a tuple with the EmailOrUsername field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResetUserPasswordRequest) GetEmailOrUsernameOk() (*string, bool) {
+	if o == nil || IsNil(o.EmailOrUsername) {
+		return nil, false
+	}
+	return o.EmailOrUsername, true
+}
+
+// HasEmailOrUsername returns a boolean if a field has been set.
+func (o *ResetUserPasswordRequest) HasEmailOrUsername() bool {
+	if o != nil && !IsNil(o.EmailOrUsername) {
+		return true
+	}
+
+	return false
+}
+
+// SetEmailOrUsername gets a reference to the given string and assigns it to the EmailOrUsername field.
+func (o *ResetUserPasswordRequest) SetEmailOrUsername(v string) {
+	o.EmailOrUsername = &v
+}
+
+// GetPassword returns the Password field value if set, zero value otherwise.
+func (o *ResetUserPasswordRequest) GetPassword() string {
+	if o == nil || IsNil(o.Password) {
+		var ret string
+		return ret
+	}
+	return *o.Password
+}
+
+// GetPasswordOk returns a tuple with the Password field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResetUserPasswordRequest) GetPasswordOk() (*string, bool) {
+	if o == nil || IsNil(o.Password) {
+		return nil, false
+	}
+	return o.Password, true
+}
+
+// HasPassword returns a boolean if a field has been set.
+func (o *ResetUserPasswordRequest) HasPassword() bool {
+	if o != nil && !IsNil(o.Password) {
+		return true
+	}
+
+	return false
+}
+
+// SetPassword gets a reference to the given string and assigns it to the Password field.
+func (o *ResetUserPasswordRequest) SetPassword(v string) {
+	o.Password = &v
+}
+
+func (o ResetUserPasswordRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ResetUserPasswordRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.OtpId) {
+		toSerialize["otpId"] = o.OtpId
+	}
+	if !IsNil(o.OtpCode) {
+		toSerialize["otpCode"] = o.OtpCode
+	}
+	if !IsNil(o.EmailOrUsername) {
+		toSerialize["emailOrUsername"] = o.EmailOrUsername
+	}
+	if !IsNil(o.Password) {
+		toSerialize["password"] = o.Password
+	}
+	return toSerialize, nil
+}
+
+type NullableResetUserPasswordRequest struct {
+	value *ResetUserPasswordRequest
+	isSet bool
+}
+
+func (v NullableResetUserPasswordRequest) Get() *ResetUserPasswordRequest {
+	return v.value
+}
+
+func (v *NullableResetUserPasswordRequest) Set(val *ResetUserPasswordRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableResetUserPasswordRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableResetUserPasswordRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableResetUserPasswordRequest(val *ResetUserPasswordRequest) *NullableResetUserPasswordRequest {
+	return &NullableResetUserPasswordRequest{value: val, isSet: true}
+}
+
+func (v NullableResetUserPasswordRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableResetUserPasswordRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
