# lib/rust/src/apis/reset_user_password_api.rs
@@ -1,0 +1,63 @@
+/*
+ * API for AuthApplication
+ *
+ * Bran's Auth API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+use reqwest;
+
+use crate::apis::ResponseContent;
+use super::{Error, configuration};
+
+
+/// struct for typed successes of method [`reset_user_password`]
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum ResetUserPasswordSuccess {
+    Status200(crate::models::AuthResponse),
+    UnknownValue(serde_json::Value),
+}
+
+/// struct for typed errors of method [`reset_user_password`]
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum ResetUserPasswordError {
+    UnknownValue(serde_json::Value),
+}
+
+
+pub async fn reset_user_password(configuration: &configuration::Configuration, reset_user_password_request: crate::models::ResetUserPasswordRequest) -> Result<ResponseContent<ResetUserPasswordSuccess>, Error<ResetUserPasswordError>> {
+    let local_var_configuration = configuration;
+
+    let local_var_client = &local_var_configuration.client;
+
+    let local_var_uri_str = format!("{}/api/v1/auth/public/reset-password", local_var_configuration.base_path);
+    let mut local_var_req_builder = local_var_client.request(reqwest::Method::POST, local_var_uri_str.as_str());
+
+    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
+        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+    }
+    local_var_req_builder = local_var_req_builder.json(&reset_user_password_request);
+
+    let local_var_req = local_var_req_builder.build()?;
+    let local_var_resp = local_var_client.execute(local_var_req).await?;
+
+    let local_var_status = local_var_resp.status();
+    let local_var_content = local_var_resp.text().await?;
+
+    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
+        let local_var_entity: Option<ResetUserPasswordSuccess> = serde_json::from_str(&local_var_content).ok();
+        let local_var_result = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        Ok(local_var_result)
+    } else {
+        let local_var_entity: Option<ResetUserPasswordError> = serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        Err(Error::ResponseError(local_var_error))
+    }
+}
+
